# fast-api-Oauth-JWT

./: .env  FastAPI.md  README.md  pyproject.toml
ToDoApp/: database.py  docker-compose.yml  main.py  models.py
ToDoApp/routers/: auth.py  todos.py
